# memory_caching

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: repro_checks.yml
artifacts/: data_manifest.json  tokenizer_manifest.json  train_manifest.json
artifacts/tokenizer/: spm_32000.model
configs/bench/: paper_targets.yaml  scientific_targets.yaml  smoke_targets.yaml
docs/: ARCHITECTURE.md  ARTIFACT_MANIFEST.md  BACKEND_API_CONTRACT.md  BACKEND_CAPABILITY_MATRIX.md  BACKEND_REPRODUCIBILITY.md  BENCHMARK_COMMAND_MATRIX.md  BENCHMARK_EVAL_CONTRACT.md  BENCHMARK_PROTOCOL.md  BENCHMARK_SWEEP_RUNBOOK.md  CHECKPOINT_CONTRACT.md  CLAIM_BOUNDARY.md  CLAIM_TO_EVIDENCE_MATRIX.md  CONSUMER_SUPPORT_MATRIX.md  CONTRIBUTING.md  CONTRIBUTOR_DRY_RUN.md  CONTRIBUTOR_ONBOARDING.md  DATA_CONTRACT.md  DLA_NOTES.md  ENV_COMPAT_MATRIX.md  IMPLEMENTATION_STATUS.md  LOG_LINEAR_ATTENTION_REFERENCE.md  LOG_LINEAR_PILOT_RUNBOOK.md  LOG_LINEAR_PP_BASELINE.md  LOG_LINEAR_TERMINOLOGY.md  NIAH_NORMALIZATION_POLICY.md  PAPER_ARTIFACT_PIN.md  PAPER_PARITY_BLOCKERS.md  PAPER_TO_CODE.md  PERIODIC_EVAL_HOOK_CONTRACT.md  PHASE1_COMMAND_MATRIX.md  PHASE_1_PLAN.md  PROGRESS_LEDGER.md  PUBLIC_API.md  PYPI_RELEASE_RUNBOOK.md  README.md  RELEASE_GATE_CHECKLIST_V0.md  RELEASE_GATE_CHECKLIST_V1.md  REPRO_AUDIT_LOG.md  REPRO_REPORT_TEMPLATE.md  SCALING_GAP_RUN_PLAN.md  (+8 more)
examples/: inspect_layer.py  loglinear_chunked_reference.py  loglinear_reference.py  longbench_subset.jsonl  minimal_layer.py  retrieval_subset.jsonl
tests/: test_backend_contract_guards.py  test_bench.py  test_claim_evidence_lint.py  test_cli.py  test_dla_backend.py  test_install_smoke_contract.py  test_layer.py  test_linear_backend.py  test_loglinear_attention.py  test_loglinear_models.py  test_loglinear_pp.py  test_paper_equations.py  test_paper_to_code_sync.py  test_phase2_parity_modes.py  test_public_api.py  test_pypi_release_preflight.py  test_scientific_manifest.py  test_seed.py  test_segmentation.py  test_smoke.py  test_smoke_repro.py  test_swla_backend.py  test_titans_backend.py  test_titans_update_convention.py
(+97 files in other folders)
